--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 3</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 3 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://israelqkexq.dbblog.net/10048542/how-entrepreneurship-can-save-you-time-stress-and-money">https://israelqkexq.dbblog.net/10048542/how-entrepreneurship-can-save-you-time-stress-and-money</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://jaredxgouz.ezblogz.com/68401325/how-entrepreneurship-can-save-you-time-stress-and-money">https://jaredxgouz.ezblogz.com/68401325/how-entrepreneurship-can-save-you-time-stress-and-money</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://info47148.designertoblog.com/68035121/considerations-to-know-about-entrepreneurship">https://info47148.designertoblog.com/68035121/considerations-to-know-about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://business66677.blogs-service.com/67763201/entrepreneurship-options">https://business66677.blogs-service.com/67763201/entrepreneurship-options</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://angeloqbiqw.bluxeblog.com/68965077/the-best-side-of-entrepreneurship">https://angeloqbiqw.bluxeblog.com/68965077/the-best-side-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://communication21975.mpeblog.com/64956535/5-easy-facts-about-entrepreneurship-described">https://communication21975.mpeblog.com/64956535/5-easy-facts-about-entrepreneurship-described</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://universe59013.articlesblogger.com/59185677/the-smart-trick-of-entrepreneurship-that-nobody-is-discussing">https://universe59013.articlesblogger.com/59185677/the-smart-trick-of-entrepreneurship-that-nobody-is-discussing</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://rowanjcwql.arwebo.com/59225129/the-5-second-trick-for-entrepreneurship">https://rowanjcwql.arwebo.com/59225129/the-5-second-trick-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://news57812.blogerus.com/58728773/5-easy-facts-about-entrepreneurship-described">https://news57812.blogerus.com/58728773/5-easy-facts-about-entrepreneurship-described</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://daltonwqjdx.bloggin-ads.com/59930302/the-2-minute-rule-for-entrepreneurship">https://daltonwqjdx.bloggin-ads.com/59930302/the-2-minute-rule-for-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page2.html" class="nav-button">← Previous</a>
+            <a href="page4.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
