--- a/page5.html
+++ b/page5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 5</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 5 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://internet60470.getblogs.net/69309480/considerations-to-know-about-entrepreneurship">https://internet60470.getblogs.net/69309480/considerations-to-know-about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://online18395.dsiblogger.com/69837348/not-known-facts-about-entrepreneurship">https://online18395.dsiblogger.com/69837348/not-known-facts-about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://cristianimjfa.ka-blogs.com/89992450/how-entrepreneurship-can-save-you-time-stress-and-money">https://cristianimjfa.ka-blogs.com/89992450/how-entrepreneurship-can-save-you-time-stress-and-money</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://sun44444.blogofoto.com/68022180/top-guidelines-of-entrepreneurship">https://sun44444.blogofoto.com/68022180/top-guidelines-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://site26047.timeblog.net/72565291/helping-the-others-realize-the-advantages-of-entrepreneurship">https://site26047.timeblog.net/72565291/helping-the-others-realize-the-advantages-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://online52738.acidblog.net/67832947/not-known-facts-about-entrepreneurship">https://online52738.acidblog.net/67832947/not-known-facts-about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://existence35791.fireblogz.com/68124532/the-2-minute-rule-for-entrepreneurship">https://existence35791.fireblogz.com/68124532/the-2-minute-rule-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://site38383.aioblogs.com/89601982/new-step-by-step-map-for-entrepreneurship">https://site38383.aioblogs.com/89601982/new-step-by-step-map-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://zaneewkxk.xzblogs.com/77275833/entrepreneurship-things-to-know-before-you-buy">https://zaneewkxk.xzblogs.com/77275833/entrepreneurship-things-to-know-before-you-buy</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://edwinwslfx.free-blogz.com/84061557/the-2-minute-rule-for-entrepreneurship">https://edwinwslfx.free-blogz.com/84061557/the-2-minute-rule-for-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page4.html" class="nav-button">← Previous</a>
+            <a href="page6.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
