--- a/page6.html
+++ b/page6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 6</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 6 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://landenyqjcc.widblog.com/91649783/entrepreneurship-an-overview">https://landenyqjcc.widblog.com/91649783/entrepreneurship-an-overview</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://lorenzowqhat.collectblogs.com/81512313/new-step-by-step-map-for-entrepreneurship">https://lorenzowqhat.collectblogs.com/81512313/new-step-by-step-map-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://brookshyqhy.isblog.net/a-secret-weapon-for-entrepreneurship-53934474">https://brookshyqhy.isblog.net/a-secret-weapon-for-entrepreneurship-53934474</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://cristianxurfr.blogdon.net/new-step-by-step-map-for-entrepreneurship-52885101">https://cristianxurfr.blogdon.net/new-step-by-step-map-for-entrepreneurship-52885101</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://online95949.blogkoo.com/detailed-notes-on-entrepreneurship-56180297">https://online95949.blogkoo.com/detailed-notes-on-entrepreneurship-56180297</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://trust52839.alltdesign.com/the-ultimate-guide-to-entrepreneurship-55744396">https://trust52839.alltdesign.com/the-ultimate-guide-to-entrepreneurship-55744396</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://remingtonzpcpb.amoblog.com/entrepreneurship-an-overview-58670107">https://remingtonzpcpb.amoblog.com/entrepreneurship-an-overview-58670107</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://sethfzslc.total-blog.com/a-secret-weapon-for-entrepreneurship-62125027">https://sethfzslc.total-blog.com/a-secret-weapon-for-entrepreneurship-62125027</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://alexisfrzgt.blog-gold.com/48799412/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing">https://alexisfrzgt.blog-gold.com/48799412/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://lukascxpwl.ambien-blog.com/43427031/about-entrepreneurship">https://lukascxpwl.ambien-blog.com/43427031/about-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page5.html" class="nav-button">← Previous</a>
+            <a href="page7.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
