--- a/page7.html
+++ b/page7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 7</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 7 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://space16150.atualblog.com/43270344/an-unbiased-view-of-entrepreneurship">https://space16150.atualblog.com/43270344/an-unbiased-view-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://beckettjucjp.blog-a-story.com/18008947/an-unbiased-view-of-entrepreneurship">https://beckettjucjp.blog-a-story.com/18008947/an-unbiased-view-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://world06258.blogacep.com/42223744/entrepreneurship-an-overview">https://world06258.blogacep.com/42223744/entrepreneurship-an-overview</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://claytongmmnb.blogadvize.com/44747325/detailed-notes-on-entrepreneurship">https://claytongmmnb.blogadvize.com/44747325/detailed-notes-on-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://online37913.bloggerbags.com/42291230/entrepreneurship-an-overview">https://online37913.bloggerbags.com/42291230/entrepreneurship-an-overview</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://business66261.bloggerswise.com/44598921/examine-this-report-on-entrepreneurship">https://business66261.bloggerswise.com/44598921/examine-this-report-on-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://reality44555.bloggosite.com/44096331/about-entrepreneurship">https://reality44555.bloggosite.com/44096331/about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://news13096.blogoscience.com/43279228/5-easy-facts-about-entrepreneurship-described">https://news13096.blogoscience.com/43279228/5-easy-facts-about-entrepreneurship-described</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://website47803.blogproducer.com/44211855/entrepreneurship-an-overview">https://website47803.blogproducer.com/44211855/entrepreneurship-an-overview</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://communication14814.blogrelation.com/43198154/how-much-you-need-to-expect-you-ll-pay-for-a-good-entrepreneurship">https://communication14814.blogrelation.com/43198154/how-much-you-need-to-expect-you-ll-pay-for-a-good-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page6.html" class="nav-button">← Previous</a>
+            <a href="page8.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
