--- a/page8.html
+++ b/page8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 8</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 8 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://troymdsix.blogrenanda.com/43379067/a-secret-weapon-for-entrepreneurship">https://troymdsix.blogrenanda.com/43379067/a-secret-weapon-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://nature27283.blogsidea.com/43370687/an-unbiased-view-of-entrepreneurship">https://nature27283.blogsidea.com/43370687/an-unbiased-view-of-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://pr85274.blogthisbiz.com/43959146/the-smart-trick-of-entrepreneurship-that-nobody-is-discussing">https://pr85274.blogthisbiz.com/43959146/the-smart-trick-of-entrepreneurship-that-nobody-is-discussing</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://space37923.blue-blogs.com/44440688/the-2-minute-rule-for-entrepreneurship">https://space37923.blue-blogs.com/44440688/the-2-minute-rule-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://mylesgtjuq.csublogs.com/44176547/a-secret-weapon-for-entrepreneurship">https://mylesgtjuq.csublogs.com/44176547/a-secret-weapon-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://beausgmmm.dailyhitblog.com/42277229/the-5-second-trick-for-entrepreneurship">https://beausgmmm.dailyhitblog.com/42277229/the-5-second-trick-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://info01492.develop-blog.com/44240839/about-entrepreneurship">https://info01492.develop-blog.com/44240839/about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://holdencdyvr.is-blog.com/43531510/entrepreneurship-things-to-know-before-you-buy">https://holdencdyvr.is-blog.com/43531510/entrepreneurship-things-to-know-before-you-buy</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://planet63849.livebloggs.com/43358966/detailed-notes-on-entrepreneurship">https://planet63849.livebloggs.com/43358966/detailed-notes-on-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://trust32097.loginblogin.com/44587420/about-entrepreneurship">https://trust32097.loginblogin.com/44587420/about-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page7.html" class="nav-button">← Previous</a>
+            <a href="page9.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
