--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 2</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 2 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://elliotkoorn.suomiblog.com/the-single-best-strategy-to-use-for-entrepreneurship-52520979">https://elliotkoorn.suomiblog.com/the-single-best-strategy-to-use-for-entrepreneurship-52520979</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://webpage41738.pointblog.net/facts-about-entrepreneurship-revealed-83307588">https://webpage41738.pointblog.net/facts-about-entrepreneurship-revealed-83307588</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://nature75185.full-design.com/what-does-entrepreneurship-mean-79215538">https://nature75185.full-design.com/what-does-entrepreneurship-mean-79215538</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://heart57552.thezenweb.com/entrepreneurship-things-to-know-before-you-buy-75032519">https://heart57552.thezenweb.com/entrepreneurship-things-to-know-before-you-buy-75032519</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://time85162.tinyblogging.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-80635181">https://time85162.tinyblogging.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-80635181</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://space15814.ampedpages.com/entrepreneurship-an-overview-63741603">https://space15814.ampedpages.com/entrepreneurship-an-overview-63741603</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://info09862.blog5.net/83254086/what-does-entrepreneurship-mean">https://info09862.blog5.net/83254086/what-does-entrepreneurship-mean</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://business40516.affiliatblogger.com/88938997/the-single-best-strategy-to-use-for-entrepreneurship">https://business40516.affiliatblogger.com/88938997/the-single-best-strategy-to-use-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://internet87654.diowebhost.com/91850870/about-entrepreneurship">https://internet87654.diowebhost.com/91850870/about-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://website51618.fitnell.com/77645005/entrepreneurship-an-overview">https://website51618.fitnell.com/77645005/entrepreneurship-an-overview</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="index.html" class="nav-button">← Previous</a>
+            <a href="page3.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
