--- a/page4.html
+++ b/page4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Faucet - Page 1</title>
+    <title>Website Faucet - Page 4</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -73,44 +73,44 @@
 <body>
     <div class="container">
         <h1>Website Faucet</h1>
-        <div class="page-info">Page 1 of 25</div>
+        <div class="page-info">Page 4 of 25</div>
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231">https://mylesyrjbt.pages10.com/5-easy-facts-about-entrepreneurship-described-72143231</a>
+                <strong>1.</strong> <a href="https://webpage14815.blogpostie.com/58083199/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing">https://webpage14815.blogpostie.com/58083199/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468">https://dallasieyto.ampblogs.com/the-ultimate-guide-to-entrepreneurship-73547468</a>
+                <strong>2.</strong> <a href="https://space59863.blogprodesign.com/58069547/new-step-by-step-map-for-entrepreneurship">https://space59863.blogprodesign.com/58069547/new-step-by-step-map-for-entrepreneurship</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079">https://information36036.blogocial.com/helping-the-others-realize-the-advantages-of-entrepreneurship-72580079</a>
+                <strong>3.</strong> <a href="https://collinrbiqv.blogdigy.com/top-guidelines-of-entrepreneurship-56356098">https://collinrbiqv.blogdigy.com/top-guidelines-of-entrepreneurship-56356098</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835">https://mariocjkkh.onesmablog.com/rumored-buzz-on-entrepreneurship-77685835</a>
+                <strong>4.</strong> <a href="https://internet72605.mybjjblog.com/the-single-best-strategy-to-use-for-entrepreneurship-49204562">https://internet72605.mybjjblog.com/the-single-best-strategy-to-use-for-entrepreneurship-49204562</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656">https://dominickgbuog.blogolize.com/not-known-facts-about-entrepreneurship-75849656</a>
+                <strong>5.</strong> <a href="https://mariohaqfu.tblogz.com/5-easy-facts-about-entrepreneurship-described-50172183">https://mariohaqfu.tblogz.com/5-easy-facts-about-entrepreneurship-described-50172183</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504">https://information68888.bloguetechno.com/the-definitive-guide-to-entrepreneurship-72179504</a>
+                <strong>6.</strong> <a href="https://rowanuchln.uzblog.net/about-entrepreneurship-50474090">https://rowanuchln.uzblog.net/about-entrepreneurship-50474090</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169">https://science91098.shotblogs.com/entrepreneurship-an-overview-50831169</a>
+                <strong>7.</strong> <a href="https://remingtonrhxoc.canariblogs.com/entrepreneurship-an-overview-51667080">https://remingtonrhxoc.canariblogs.com/entrepreneurship-an-overview-51667080</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615">https://rowansfrew.tribunablog.com/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing-51191615</a>
+                <strong>8.</strong> <a href="https://webpage15937.qowap.com/95874789/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing">https://webpage15937.qowap.com/95874789/the-smart-trick-of-entrepreneurship-that-no-one-is-discussing</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803">https://net89887.blogzet.com/helping-the-others-realize-the-advantages-of-entrepreneurship-51608803</a>
+                <strong>9.</strong> <a href="https://nature83950.blog2learn.com/84423893/entrepreneurship-options">https://nature83950.blog2learn.com/84423893/entrepreneurship-options</a>
             </li>
             <li class="url-item">
-                <strong>10.</strong> <a href="https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919">https://deanqftgr.blogminds.com/helping-the-others-realize-the-advantages-of-entrepreneurship-33792919</a>
+                <strong>10.</strong> <a href="https://johnnyxphyo.jiliblog.com/93301238/detailed-notes-on-entrepreneurship">https://johnnyxphyo.jiliblog.com/93301238/detailed-notes-on-entrepreneurship</a>
             </li>
         </ul>
         
         <div class="navigation">
-            <span class="nav-button disabled">← Previous</span>
-            <a href="page2.html" class="nav-button">Next →</a>
+            <a href="page3.html" class="nav-button">← Previous</a>
+            <a href="page5.html" class="nav-button">Next →</a>
         </div>
     </div>
 </body>
