--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Website - Page 1</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f5f5f5;
+        }
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .url-list {
+            list-style: none;
+            padding: 0;
+        }
+        .url-item {
+            margin: 15px 0;
+            padding: 15px;
+            background-color: #f8f9fa;
+            border-radius: 5px;
+            border-left: 4px solid #007bff;
+        }
+        .url-item a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .url-item a:hover {
+            text-decoration: underline;
+        }
+        .navigation {
+            margin-top: 30px;
+            text-align: center;
+        }
+        .nav-button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 0 10px;
+            background-color: #007bff;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: 500;
+        }
+        .nav-button:hover {
+            background-color: #0056b3;
+        }
+        .nav-button.disabled {
+            background-color: #6c757d;
+            pointer-events: none;
+        }
+        .page-info {
+            margin: 20px 0;
+            text-align: center;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Website</h1>
+        <div class="page-info">Page 1 of 25</div>
+        
+        <ul class="url-list">
+            <li class="url-item">
+                <strong>1.</strong> <a href="https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025">https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025</a>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
