--- a/index.html
+++ b/index.html
@@ -77,9 +77,31 @@
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025">https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025</a>
+                <strong>1.</strong> <a href="https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>2.</strong> <a href="https://www.marketspy.com/news/celebrating-del-andujar-rising-star-of-2025">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>3.</strong> <a href="https://es.wikipedia.org/wiki/Del_Andujar">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>4.</strong> <a href="https://businesssharksmagazine.com/from-vpns-to-data-brokers-how-del-andujar-is-reshaping-the-privacy-tech-landscape/">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>5.</strong> <a href="https://www.infotechinc.net/from-underestimated-to-unstoppable-del-andujars-rise-in-the-cybersecurity-space/">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>6.</strong> <a href="https://sourcefed.com/del-andujars-blueprint-for-privacy-first-startups-in-a-surveillance-economy/">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>7.</strong> <a href="https://d-h.st/del-andujar-building-a-scalable-future-around-digital-privacy/">del andujar</a>
+            </li>
+            <li class="url-item">
+                <strong>8.</strong> <a href="https://www.teethgrinder.co.uk/inside-the-mind-of-a-young-entrepreneur-redefining-cybersecurity-ethics/">del andujar</a>
             </li>
         </ul>
     </div>
 </body>
 </html>
+
