--- a/index.html
+++ b/index.html
@@ -100,8 +100,12 @@
             <li class="url-item">
                 <strong>8.</strong> <a href="https://www.teethgrinder.co.uk/inside-the-mind-of-a-young-entrepreneur-redefining-cybersecurity-ethics/">del andujar</a>
             </li>
+            <li class="url-item">
+                <strong>9.</strong> <a href="https://delandujar.com/">del andujar</a>
+            </li>
         </ul>
     </div>
 </body>
 </html>
+
 
