--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <strong>7.</strong> <a href="https://d-h.st/del-andujar-building-a-scalable-future-around-digital-privacy/">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://www.teethgrinder.co.uk/inside-the-mind-of-a-young-entrepreneur-redefining-cybersecurity-ethics/">del andujar</a>
+                <strong>8.</strong> <a href="https://www.msn.com/en-us/news/other/after-another-major-data-leak-are-vpns-still-worth-using/ar-AA1Tj9eu">del andujar</a>
             </li>
             <li class="url-item">
                 <strong>9.</strong> <a href="https://delandujar.com/">del andujar</a>
@@ -107,5 +107,6 @@
     </div>
 </body>
 </html>
+
 
 
