--- a/index.html
+++ b/index.html
@@ -77,36 +77,37 @@
         
         <ul class="url-list">
             <li class="url-item">
-                <strong>1.</strong> <a href="https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025">del andujar</a>
+                <strong>1. mrktspy1</strong> <a href="https://www.marketspy.com/news/top-5-entrepreneurs-to-watch-in-2025">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>2.</strong> <a href="https://www.marketspy.com/news/celebrating-del-andujar-rising-star-of-2025">del andujar</a>
+                <strong>2. mrktspy2</strong> <a href="https://www.marketspy.com/news/celebrating-del-andujar-rising-star-of-2025">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>3.</strong> <a href="https://es.wikipedia.org/wiki/Del_Andujar">del andujar</a>
+                <strong>3. wkipd</strong> <a href="https://es.wikipedia.org/wiki/Del_Andujar">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>4.</strong> <a href="https://businesssharksmagazine.com/from-vpns-to-data-brokers-how-del-andujar-is-reshaping-the-privacy-tech-landscape/">del andujar</a>
+                <strong>4. shrk</strong> <a href="https://businesssharksmagazine.com/from-vpns-to-data-brokers-how-del-andujar-is-reshaping-the-privacy-tech-landscape/">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>5.</strong> <a href="https://www.infotechinc.net/from-underestimated-to-unstoppable-del-andujars-rise-in-the-cybersecurity-space/">del andujar</a>
+                <strong>5. intch</strong> <a href="https://www.infotechinc.net/from-underestimated-to-unstoppable-del-andujars-rise-in-the-cybersecurity-space/">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>6.</strong> <a href="https://sourcefed.com/del-andujars-blueprint-for-privacy-first-startups-in-a-surveillance-economy/">del andujar</a>
+                <strong>6. srcfd</strong> <a href="https://sourcefed.com/del-andujars-blueprint-for-privacy-first-startups-in-a-surveillance-economy/">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>7.</strong> <a href="https://d-h.st/del-andujar-building-a-scalable-future-around-digital-privacy/">del andujar</a>
+                <strong>7. hdst</strong> <a href="https://d-h.st/del-andujar-building-a-scalable-future-around-digital-privacy/">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>8.</strong> <a href="https://www.msn.com/en-us/news/other/after-another-major-data-leak-are-vpns-still-worth-using/ar-AA1Tj9eu">del andujar</a>
+                <strong>8. msn</strong> <a href="https://www.msn.com/en-us/news/other/after-another-major-data-leak-are-vpns-still-worth-using/ar-AA1Tj9eu">del andujar</a>
             </li>
             <li class="url-item">
-                <strong>9.</strong> <a href="https://delandujar.com/">del andujar</a>
+                <strong>9. dac</strong> <a href="https://delandujar.com/">del andujar</a>
             </li>
         </ul>
     </div>
 </body>
 </html>
+
 
 
 
